--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@mui/icons-material": "latest",
     "@mui/material": "latest",
     "@mui/material-nextjs": "latest",
+    "@reduxjs/toolkit": "^2.2.6",
     "framer-motion": "^11.3.2",
     "next": "latest",
     "react": "latest",
-    "react-dom": "latest"
+    "react-dom": "latest",
+    "react-redux": "^9.1.2"
   },
   "devDependencies": {
     "@types/node": "latest",
